--- a/app.css
+++ b/app.css
@@ -23,12 +23,16 @@
 .restocard-wrapper{
     border: 1px solid black;
     background-color: #828282;
+    min-width: 220px;
     max-width: 250px;
-    /* padding: 20px; */
     color: #fff;
 }
 .restocard-main-wrapper{
     margin: 25px 30px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+ 
 }
 .resto-image{
     width: 100%;
@@ -46,4 +50,12 @@
 .search-wrapper > input{
     width: 40%;
     padding: 15px 5px;
+}
+.restocard-text h2{
+    margin: 10px 0 25px;
+    font-size: 20px;
+}
+.restocard-text p{
+    font-size: 16px;
+    margin: 10px 0;
 }
