--- a/app.css
+++ b/app.css
@@ -23,8 +23,9 @@
 .restocard-wrapper{
     border: 1px solid black;
     background-color: #828282;
-    min-width: 220px;
-    max-width: 250px;
+    /* min-width: 220px;
+    max-width: 250px; */
+    width: 15%;
     color: #fff;
 }
 .restocard-main-wrapper{
