--- a/app.css
+++ b/app.css
@@ -15,6 +15,7 @@
 .menu-wrapper ul{
     display: flex;
     gap: 50px;
+    align-items: center;
 }
 .menu-wrapper ul li{
     list-style: none;
@@ -60,8 +61,25 @@
     font-size: 16px;
     margin: 10px 0;
 }
-.filter{
+.filter, .search-things{
     padding: 15px;
     margin-left: 15px;
+    cursor: pointer;
+}
+
+.shimmer.restocard-wrapper{
+    width: 15%;
+    height: 400px;
+    background-color: #8d8c8c;
+}
+.shimmer-wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 60px;
+    margin: 40px;
+}
+
+.l-btn{
+    padding: 15px;
     cursor: pointer;
 }
