--- a/app.css
+++ b/app.css
@@ -26,7 +26,7 @@
     background-color: #828282;
     /* min-width: 220px;
     max-width: 250px; */
-    width: 15%;
+    /* width: 15%; */
     color: #fff;
 }
 .restocard-main-wrapper{
@@ -82,4 +82,12 @@
 .l-btn{
     padding: 15px;
     cursor: pointer;
+}
+
+.restocard-main-wrapper > a{
+    width: 15%;
+}
+
+.restaurant-menu-wrapper{
+    margin: 50px;
 }
